# embedded-rust-techniques

./: .gitignore  404.html  book.toml  index.html  print.html  searchindex.js  searchindex.json  stylesheet.css
01-introduction/: introduction.html
02-setup/: setup.html
03-bare-metal/: allocator.html  assembly.html  bare-metal.html  entry.html  linker.html  no_std.html  panic.html  print.html
04-tools/: cargo.html  compiler.html  rustc.html  tools.html
05-library/: heapless.html  library.html  no_std_crates.html  rtfm.html  svd2rust.html  testing.html  tock.html
06-ffi/: c-with-rust.html  ffi.html  ffi.md  rust-with-c.html  zephyr-bindings.html
07-linux/: basic.html  embedded-linux.html  yocto.html
ci/03-bare-metal/allocator/: Cargo.toml
ci/04-tools/: lib.rs  liblib.rlib
ci/06-ffi/hello/: CMakeLists.txt  prj.conf
ci/06-ffi/hello/hello/: .gitignore  Cargo.toml  Makefile
ci/06-ffi/hello/hello/lib/: bindings.h
ci/06-ffi/hello/hello/src/: lib.rs
ci/06-ffi/hello/src/: main.c  socket_echo.c
ci/06-ffi/hello/zephyr/: Cargo.toml
ci/06-ffi/hello/zephyr-sys/: Cargo.toml
ci/06-ffi/hello/zephyr-sys/headers/: bindings.h
ci/06-ffi/hello/zephyr-sys/src/: bindings.rs  lib.rs
ci/06-ffi/hello/zephyr/src/: io.rs  lib.rs
src/: SUMMARY.md
src/01-introduction/: introduction.md
src/02-setup/: setup.md
src/03-bare-metal/: allocator.md  assembly.md  bare-metal.md  entry.md  linker.md  no_std.md  panic.md  print.md
src/04-tools/: cargo.md  compiler.md  lint.md  rustc.md  tools.md
src/05-library/: heapless.md  library.md  no_std_crates.md  rtfm.md  svd2rust.md  testing.md  tock.md
src/06-ffi/: c-with-rust.md  ffi.md  rust-with-c.md  zephyr-bindings.md
src/07-linux/: basic.md  embedded-linux.md  yocto.md
(+12 files in other folders)
